# cxadc-clockgen-mod

./: README.md
firmware/: .gitignore  CMakeLists.txt
firmware/src/: CMakeLists.txt  build_info.h  clock_gen.c  clock_gen.h  dbg.c  dbg.h  fifo.c  fifo.h  global_status.c  global_status.h  head_switch.c  head_switch.h  main0.c  main1.c  main1.h  pcm1802.c  pcm1802.h  pcm1802_fmt00.pio  tusb_config.h  usb_audio.c  usb_audio.h  usb_audio_format.c  usb_audio_format.h  usb_descriptors.c  usb_descriptors.h
firmware/src/libsi5351/: README.md  asserts.h  errors.h  si5351.c  si5351.h
scripts/: README.md  capture-vhs.sh  collect-info.sh  imhex-debug-pattern.hexpat
